fixed dot container overflow issue

--- a/src/styles/FeaturedReleases.module.scss
+++ b/src/styles/FeaturedReleases.module.scss
@@ -50,7 +50,7 @@
 	justify-content: center;
   position: absolute;
 	top: 90%;
-	left: 80%;
+	right: 1rem;
 	transform: translate(0, -50%);
 }
 
